# AI_Engineer_Learning

./: .gitignore  docker-compose.yml  main.py  pyproject.toml  requirements.txt  text.http
backend/: Dockerfile  main.py  requirements.txt  services.py
data-cleaner/: cleaned_result.csv  cleaner_cli.py  cleaner_v1.py  cleaner_v2.py  cleaner_v3.py  practice_cli.py  practice_func.py  practice_log.py  practice_oop.py  readme.md
data-cleaner/ai_tools/: build_knowledge.py  copywriter_cli.py  hello_llm.py  policy_bot.py  policy_bot_v2.py
data-cleaner/ai_tools/knowledge_base/: amazon_policy.txt
data-cleaner/ai_tools/knowledge_base/faiss_index/: index.faiss  index.pkl
data-cleaner/sample_data/: amazon_products_cleaned.csv  amazon_products_sample.csv
frontend/: Dockerfile  app.py
