[project]
name = "studydaily"
version = "0.1.0"
description = "StudyDaily Project - 亚马逊智能助手API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.24.0",
    # LangChain 相关
    "langchain-openai>=0.0.5",
    "langchain-core>=0.1.0",
    "langchain-huggingface>=0.1.0",
    "langchain-community>=0.0.10",
    # 向量数据库
    "faiss-cpu>=1.7.0",
    # Embedding 模型
    "sentence-transformers>=2.2.0",
    "huggingface-hub>=0.16.0",
    # Streamlit
    "streamlit>=1.30.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = []
